<resources>
    <string name="app_name">R-B-Tree</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_options">Options</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="newTree">New tree</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="about"></string>
    <string name="add"></string>
    <string name="hintKey"></string>
    <string name="hintValue"></string>
    <string name="delete"></string>
    <string name="error"></string>
    <string name="error1"></string>
    <string name="title_activity_tree">Tree</string>
</resources>
