<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gradergage.redblack.Tree"
    tools:showIn="@layout/activity_tree">

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listView"
        android:textColor="@color/colorPrimaryDark"
        android:clickable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_above="@+id/editValue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/buttonAdd"
        android:textStyle="bold"
        android:background="@color/crimson"
        android:textColor="@color/white"
        android:isScrollContainer="false"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/listView"
        android:layout_alignRight="@+id/listView"
        android:layout_toRightOf="@+id/space"
        android:layout_toEndOf="@+id/space" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/editKey"
        android:hint="@string/hintKey"
        android:inputType="number"
        android:maxLines="1"
        android:maxWidth="4dp"
        android:layout_alignStart="@+id/listView"
        android:layout_below="@+id/listView"
        android:layout_above="@+id/buttonAdd"
        android:layout_toStartOf="@+id/space"
        android:layout_toLeftOf="@+id/space" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editValue"
        android:hint="@string/hintValue"
        android:maxLines="1"
        android:maxLength="30"
        android:layout_above="@+id/buttonAdd"
        android:layout_alignRight="@+id/listView"
        android:layout_alignEnd="@+id/listView"
        android:layout_toEndOf="@+id/space"
        android:layout_toRightOf="@+id/space" />

    <Button
        android:background="@color/crimson"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDelete"
        android:text="@string/delete"
        android:textStyle="bold"
        android:layout_below="@+id/editKey"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/space"
        android:layout_toStartOf="@+id/space" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/space"
        android:layout_below="@+id/listView" />


</RelativeLayout>
