<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gradergage.redblack.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTree"
        android:id="@+id/buttonTree"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:layout_toRightOf="@+id/space3"
        android:layout_alignRight="@+id/space2"
        android:layout_alignEnd="@+id/space2" />

    <Button
        android:background="@color/crimson"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:id="@+id/buttonOptions"
        android:layout_alignRight="@+id/buttonExit"
        android:layout_alignEnd="@+id/buttonExit"
        android:layout_alignLeft="@+id/buttonExit"
        android:layout_alignStart="@+id/buttonExit"
        android:layout_below="@+id/buttonTree" />

    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/buttonExit"
        android:layout_below="@+id/buttonOptions"
        android:layout_alignLeft="@+id/buttonTree"
        android:layout_alignStart="@+id/buttonTree"
        android:layout_alignRight="@+id/buttonTree"
        android:layout_alignEnd="@+id/buttonTree" />

    <Space
        android:layout_width="40dp"
        android:layout_height="300dp"
        android:id="@+id/space2"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/space4"
        android:layout_toRightOf="@+id/space3" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/space2"
        android:layout_alignParentTop="true"
        android:id="@+id/space3" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:id="@+id/space4"
        android:layout_alignTop="@+id/space2"
        android:layout_alignBottom="@+id/space2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
